# csfdapi

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
src/: lib.rs  types.rs
src/requests/: home.rs  identity.rs  mod.rs
