[package]
name = "csfdapi"
version = "0.1.0"
authors = ["Richard Hozák <r.hozak@seznam.cz>"]
description = "Unofficial wrapper for mobile csfd api."
license = "MIT/Apache-2.0"
readme = "README.md"

[lib]
name = "csfdapi"
path = "src/lib.rs"

[dependencies]
reqwest = "0.8"
oauth1 = "0.3"
failure = "0.1"
url = "1.7"
web-view = "0.2"
select = "0.4"
hyper = "0.11.22"
serde = "1.0"
serde_json = "1.0"
